it162_portalv4 _SEE NOTES
Version 4 CSS, HTML, php files
All php are (to the best of my knowledge) save right after HTML is saved. 
These are the files sent to SN/BM for troubleshooting. 
Header & footer omitted on this versions, as they are incomplete.

--- a/includes/index.html
+++ b/includes/index.html
@@ -34,8 +34,8 @@
  <h2 class="pageID">Welcome, Willkommen, ようこそ, Ceud mìle fàilte, Yin Dee Dtôn Ráp, Bienvenidos, Aloha, Benvenute, Wemukelekile, أهلاً و سهلاً, Ngiyanemukela </h2>
 
 <!-- MAKE SURE YOU GET YOUR (3) IMAGES SAVED INTO YOUR IMAGES FOLDER -->
- <img src="/images/sunset6me.jpg" class="desktop" alt="" />
- <img src="/images/pic!Blake.jpg" class="phone" alt="" />
+ <img src="/images/sunset6me.jpg" class="desktop" alt=Golden Gardens Sunset" />
+ <img src="/images/pic!Blake.jpg" class="phone" alt="Boating" />
  <p> I am currently working to become a Web Designer with a focus on the User Experience. I hold a degree in Art History with a Business Minor. Prior to the world-wife shift, I was lucky enough to have had the positions of an Art Dealer, Events Manager, and a Wine Steward. My career has always been in sales and marketing, so I like to make concepts tangible. </p>
 
 <p>My design style ambition is to marry traditions of design and visual arts with technology to create uniquely appealing designs. I am a hoarder of font families and color palette ideas. For every project I have the perfect match!</p>
