--- a/it162/css/nav.css
+++ b/it162/css/nav.css
@@ -2,30 +2,35 @@
 /* CSS Document */
 
 /* Remove margins and padding from the list, and add a black background color */
+
 ul.topnav {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: 5px ;
+    padding: 5px;
     overflow: hidden;
-    background-color: #333;
+    font: 18px, "Fieldwork Geo Bold", Acute, Helvetica;
+    background-color: #463f3a;
 }
 
 /* Float the list items side by side */
-ul.topnav li {float: left;}
+ul.topnav li {
+  
+    float: left;
+}
 
 /* Style the links inside the list items */
 ul.topnav li a {
     display: inline-block;
-    color: #f2f2f2;
+    color:  #bebad1;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
     transition: 0.3s;
-    font-size: 17px;
+    font: 18px, "Fieldwork Geo Bold", Acute, Helvetica;
+    color: #ebddd9;
 }
 
 /* Change background color of links on hover */
-ul.topnav li a:hover {background-color: #555;}
+ul.topnav li a:hover {background-color: rgb(182, 175, 214)}
 
 /* Hide the list item that contains the link that should open and close the topnav on small screens */
 ul.topnav li.icon {display: none;}
@@ -59,7 +64,4 @@ ul.topnav li.icon {display: none;}
     display: block;
     text-align: left;
   }
-
 }
-
-
