--- a/it162/css/nav.css
+++ b/it162/css/nav.css
@@ -19,7 +19,7 @@ ul.topnav li {
 }
 
 /* Style the links inside the list items */
-ul.topnav li a {
+ul.topnav li a.selected {
     display: inline-block;
     color:  #bebad1;
     text-align: center;
