--- a/it162/css/flowchart.css
+++ b/it162/css/flowchart.css
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+/* <!DOCTYPE html>
 <html>
 <head>
     <title>Kelly J. Hill SCC IT162 Portal</title>
@@ -13,4 +13,4 @@
 
 
 </body>
-</html>
+</html> */
