--- a/it162/css/nav.css
+++ b/it162/css/nav.css
@@ -1,68 +1,34 @@
 @charset "utf-8";
-/* CSS Document */
-
-/* Remove margins and padding from the list, and add a black background color */
-
-ul.topnav {
-    list-style-type: none;
-    margin: 5px ;
-    padding: 5px;
-    overflow: hidden;
-    /* font: 18px, "Fieldwork Geo Bold", Acute, Helvetica;
-    background-color: #ece9f1; */
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
 }
 
-/* Float the list items side by side */
-ul.topnav li {
-      float: left;
-      padding: 20px;
-      font: 18px, "Fieldwork Geo Bold", Acute, Helvetica;
-      background-color: #ece9f1;
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-/* Style the links inside the list items */
-ul.topnav li a.selected {
-    display: inline-block;
-    text-align: center;
-    padding: 14px 16px;
-    transition: 0.3s;
-    font: 18px, "Fieldwork Geo Bold", Acute, Helvetica;
-    color: #ebddd9;
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-/* Change background color of links on hover */
-ul.topnav li a:hover {background-color: #e8e5f1}
-
-/* Hide the list item that contains the link that should open and close the topnav on small screens */
-ul.topnav li.icon {display: none;}
-
-/* When the screen is less than 680 pixels wide, hide all list items, except for the first one ("Home"). Show the list item that contains the link to open and close the topnav (li.icon) */
-@media screen and (max-width:680px) {
-  ul.topnav li:not(:first-child) {display: none;}
-  ul.topnav li.icon {
-    /* float: right; */
-    display: inline-block;
-   }
+/* Add an active class to highlight the current page */
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
 }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens */
-
-@media screen and (max-width:680px) {
- 
-  ul.topnav.responsive {position: relative;}
-  ul.topnav.responsive li.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-
-  ul.topnav.responsive li {
-    float: none;
-    display: inline;
-  }
-
-  ul.topnav.responsive li a {
-    display: block;
-    text-align: left;
-  }
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+  display: none;
 }
