--- a/it162/big/css/big.css
+++ b/it162/big/css/big.css
@@ -16,7 +16,7 @@ div.wrapper {
 header {
     display: grid;
     grid-column: 1 / 4;
-    grid-row: 1/2
+    grid-row: 1/ 2;
 }
 
 h1 {
@@ -29,6 +29,7 @@ h1 {
 h2 {
     font: 24px "Fieldwork Geo", Acute, Helvetica;
     text-align: justify;
+    justify-content: center;
     padding: 10px 0px 10px 0px;
     margin-right: auto;
     /* float: right; */
@@ -44,52 +45,54 @@ h3  {
     padding: 0px 10px;
 }
 
-/* .diagram   {
-    display: grid;
-    grid-column: 3 / 4;
-    grid-row: 2 / 3;
-
-} */
-
 
 p {
     font: 14px "Fieldwork Geo", Acute, Helvetica;
-    /* text-align: justify; */
+    text-align: justify;
 }
 
 .main {
     display: grid;
-    /* grid-column: 1 / 2;
-    grid-row: 2 / 3; */
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
     padding-left: 10px;
     padding-right: 20px;
     font: 14px "Fieldwork Geo", Acute, Helvetica;
 }
-
 aside  {
-    display: grid;
-    /* float: right; */
-    /* grid-column: 2 / 3;
-    grid-row: 2 / 3; */
+    display: inline-block;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
     font: 14px "Fieldwork Geo", Acute, Helvetica;
     text-align: justify;
     padding-right: 20px;
-    padding-top: 30px;
+    PADDING-LEFT: 20PX;
+    padding-top: 30px
 }
 
-.right  {
+#right  {
+    float: right;
     padding-top: 30px;
-    padding-right: 20px;
-}
+    padding-right: 100px;
+    width: 50%;
+    height: auto;
+      }
 
-/* #address    {
-    display: flex;
+#youtube {
+    display: grid;
+    padding-right: 150px;
+}
+#address    {
+    display: grid;
+    grid-column: 2 / 3;
+    grid-area: 2 / 3;
     align-items: center;
-    float: none;
     text-justify: center;
+}
+
+/* cite {
+    text-decoration: underline italic;
 } */
-
-
 
  div.desktop {
         float: right;
@@ -108,6 +111,12 @@ aside  {
     text-shadow:1px 1px #817b9e;
     font-size: 1em;
     padding: 0px 10px;
+}
+
+.agenda .month {
+    display: grid;
+    grid-column: 2 /3;
+    grid-row: 1 / 3;
 }
 
 footer {
@@ -149,7 +158,7 @@ div.embed-container iframe {
 
 
 /* Embed Responsively Rules! */
-div.embed-container-month {
+div.embed-container  .month {
     position: relative;
     padding-bottom: 56.25%;
     height: 0;
@@ -157,14 +166,60 @@ div.embed-container-month {
     /* margin: auto; */
     max-width: 98%;
 }
+div.embed-container { 
+    position: relative; 
+    padding-bottom: 56.25%; 
+    height: 0; overflow: hidden; 
+    max-width: 100%; } 
+    
+    div.embed-container iframe { 
+        position: absolute; 
+        top: 0; 
+        left: 0; 
+        width: 100%; 
+        height: 100%; }
 
-div.embed-container-agenda {
-    position: absolute;
+#calpad  
+        {
+            padding-top: 31px;
+            padding-left: 300px
+        }
+
+#calpad2    {
+    
+    padding-right: 300px
+}
+
+#refer {
+    display: grid;
+    grid-column: 1 / 4;
+    justify-content: center;
+}
+
+div.embed-container-agenda .embed-container-cam2 {
+    /* position: absolute; */
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
 }
+.embed-container-map .embed-container-cam1 { 
+        position: relative; 
+        padding-bottom: 56.25%; 
+        padding-top: 30px;
+        padding-left: 30px;
+        height: 0; 
+        overflow: hidden; 
+        max-width: 100%; 
+    } 
+        
+.embed-container iframe { 
+                position: absolute; 
+                top: 0; 
+                left: 0; 
+                width: 100%; 
+                height: 100%; }
+
 /* DESKTOP */
 @media all and (min-width:970px) {
 
@@ -207,7 +262,7 @@ div.embed-container-agenda {
     }
 
     /* HIDE MONTH VIEW ON PHONE FOR CALENDER ifram taken out*/
-    .embed-container .agenda {
+    .embed-container .agenda .embed-container-map{
         position: absolute;
         top: 0;
         left: 0;
