--- a/fp/css/index_fp.css
+++ b/fp/css/index_fp.css
@@ -1,103 +1,85 @@
 body {
-  /* display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto auto; */
-    background: rgb(236, 230, 230);
-    /* margin: none;
-    grid-column: 1 / 5;
-    grid-row: 1 / 6; */
-}
-
-.wrapper {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto auto;
-    /* grid-gap: 5px;  */
-    background-color: #030000;
-    font-family: "Helvetica Neue" Arial;
-}
-
- .container    {
-    background: rgb(236, 230, 230);
-    margin: none;
-    grid-column: 1 / 5;
-    grid-row: 1 / 6;
- }
-
  
+    background: rgb(255, 255, 255);
+  
+}
+
 header {
   width: 100%;
   display: grid;
   grid-column: 1 / 4;
   grid-row: 2 / 3;
-  background-color: rgb(236, 230, 230);
+  background-color: rgb(255, 255, 255);
+}
+.wrapper {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
+    /* grid-gap: 5px;  */
+    overflow: hidden;
+}
+main {
+  display: grid;
+  background-color: rgb(255, 255, 255);
+  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+  grid-column: 1 / 4;
+  grid-row: 3 / 4;
+}
+
+footer {
+  background-color: rgb(255, 255, 255);
+  color: rgb(32, 19, 19);
+  font: 10px "Helvetica Neue", Arial, Helvetica, sans-serif;
+  text-align: center;
+  grid-row: 4 / 5;
+  grid-column: 1 / 5;
 }
 
  nav {
    display: grid;
    grid-column: 1 / 4;
    grid-row:  1 / 2;
-   background-color: rgb(236, 230, 230);
+   background-color: rgb(255, 255, 255);
     width: 100%;
     justify-items: center;
     font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; 
  }
 
  ul.topnav li   {
- /* color: whitesmoke; */
- display: inline-block;
- margin: 20px;
- font-style: black 30px;
- font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; 
+  display: inline-block;
+  margin: 20px;
+  font-style: black 30px;
+  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; 
 
 }
 
 :hover nav ul li a:hover {
 
-  background: #faf5f6; /* Old browsers */
+  background: #969494; /* Old browsers */
 
   /* background: -moz-linear-gradient(top, #b0ca34 0%, #96c40d 100%); FF3.6+ 
-
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b0ca34), color-stop(100%,#96c40d)); Chrome,Safari4+
-
   background: -webkit-linear-gradient(top, #b0ca34 0%,#96c40d 100%);  Chrome10+,Safari5.1+ 
-
   background: -o-linear-gradient(top, #b0ca34 0%,#96c40d 100%); Opera 11.10+
-
   background: linear-gradient(to bottom, #faf5f6 0%,#521b26, 100%);*/
   }
-   
-main {
- background-color: rgb(236, 230, 230);
- font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; 
- width: 100%;
- /* display: grid;
- grid-row: 2 / 3;
- grid-column: 1 / 6; */
-}
 
-footer {
-  background-color: rgb(236, 230, 230);
-  color: rgb(32, 19, 19);
-  font: 10px "Helvetica Neue", Arial, Helvetica, sans-serif;
-  text-align: center;
-}
 
 /* DESKTOP */
 
 @media all and (max-width: 2560px) {
-	
+
   main {
    width: 95%;
-  
+
  }
 
 img.desktop {
   width: 100%;
   display: block;
  }
- 
- img.tablet img.phone {
+
+ img.tablet, img.phone {
     display: none;
 }
   main {
@@ -108,23 +90,23 @@ img.desktop {
 
 /*TABLET*/
 @media all and (min-width:737px) and (max-width: 920px) {
- 
+
   main {
     width: 75%;
     overflow: hidden; 
   }
 
- 
-  .tablet {
+
+  img.tablet {
           width: auto;
           display: block;
    }
-   
+
   img.desktop, img.phone {
         display: none;
      }  
-   
-  
+
+
    /* ul.topnav li a.selected {
        background-color: #ccc;
        color:#000;
@@ -134,7 +116,7 @@ img.desktop {
 
 /* PHONE */
 @media all and (max-width: 738 px) {
-   
+
   main {
     width: 40%;
     overflow: hidden; 
@@ -144,8 +126,64 @@ img.desktop {
           width:100%;
            display: block;
    }
-   
-   img.tablet img.desktop {
+
+   img.tablet, img.desktop {
         display: none;
      }  
     }
+   
+
+
+    /* FORM CSS */
+    main.form  {
+      margin:1em;
+      font: 14px "Fieldwork Geo", Acute, Helvetica;
+    }
+    /* label {
+      font: 14px "Fieldwork Geo", Acute, Helvetica;
+    } */
+    /* writes to small text above reCAPTCHA upon failure */
+    
+    .dateFeedback{
+    font-style:italic;
+    font-size:70%;
+    font-weight:bold;
+    color:#f00;
+    }
+    
+    input:required {
+        border: 1px solid red;
+    }
+    
+    input:optional, textarea:optional {
+       background-color:#f1f1f1;
+       border:1px solid #ccc;
+    }
+    
+    input[type="submit"], input[type="button"] {
+    background-color: #fff;
+    border-radius: 4px;
+    border: solid 1px #ccc;
+    padding: 0.3em 0.5em;
+    }
+    
+    fieldset {
+    border: 1px solid #ccc;
+    max-width: 350px;
+    }
+    
+    legend {
+    margin-left: 0.5em;
+    padding: 0.2em 0.5em;
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    }
+    
+    /* end reCAPTCHA styles */
+    
+    
+    
+    /* end reCAPTCHA styles */
+    
+    
+    
