--- a/fp/css/nav.css
+++ b/fp/css/nav.css
@@ -1,12 +1,12 @@
 @charset "utf-8";
 /* Add a black background color to the top navigation */
-.topnav {
+.mobinav {
   background-color: #333;
   overflow: hidden;
 }
 
 /* Style the links inside the navigation bar */
-.topnav a {
+.mobinav a {
   float: left;
   display: block;
   color: #f2f2f2;
@@ -14,39 +14,41 @@
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  width: 100%;
 }
 
 /* Change the color of links on hover */
-.topnav a:hover {
+.mobinav a:hover {
   background-color: #ddd;
   color: black;
 }
 
 /* Add an active class to highlight the current page */
-.topnav a.active {
+.mobinav a.active {
   background-color: #4CAF50;
   color: white;
 }
 
 /* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
+.mobinav a.icon {
   display: none;
 }
 
 /* Style the navigation menu */
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-  position: relative;
+
+.mobinav {
+    overflow: hidden;
+    background-color: #333;
+    display: none;
 }
 
 /* Hide the links inside the navigation menu (except for logo/home) */
-.topnav #myLinks {
+/* .topnav #myLinks {
   display: none;
-}
+} */
 
 /* Style navigation menu links */
-.topnav a {
+.mobinav a {
   color: white;
   padding: 14px 16px;
   text-decoration: none;
@@ -55,22 +57,22 @@
 }
 
 /* Style the hamburger menu */
-.topnav a.icon {
+.mobinav a.icon {
   background: black;
   display: block;
-  position: absolute;
   right: 0;
   top: 0;
+  width:20px;
 }
 
 /* Add a grey background color on mouse-over */
-.topnav a:hover {
+.mobinav a:hover {
   background-color: #ddd;
   color: black;
 }
 
 /* Style the active link (or home/logo) */
 .active {
-  background-color: #4CAF50;
+  background-color: #120f16;
   color: white;
 }
