--- a/it162/fp/css/index_fp.css
+++ b/it162/fp/css/index_fp.css
@@ -1,28 +1,7 @@
 body {
-  /* display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto auto; */
-    background: rgb(236, 230, 230);
-    /* margin: none;
-    grid-column: 1 / 5;
-    grid-row: 1 / 6; */
+ 
+    background: rgb(255, 255, 255);
 }
-
-.wrapper {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto auto;
-    /* grid-gap: 5px;  */
-    background-color: #030000;
-    font-family: "Helvetica Neue" Arial;
-}
-
- .container    {
-    background: rgb(236, 230, 230);
-    margin: none;
-    grid-column: 1 / 5;
-    grid-row: 1 / 6;
- }
 
  
 header {
@@ -30,101 +9,161 @@ header {
   display: grid;
   grid-column: 1 / 4;
   grid-row: 2 / 3;
-  background-color: rgb(236, 230, 230);
+  background-color: rgb(255, 255, 255);
+ 
+}
+
+
+.wrapper {
+  width: auto;
+    overflow: hidden;
+}
+h2 {
+  display: grid;
+  background-color: rgb(255, 255, 255);
+  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+  color: rgb(32, 19, 19);
+  grid-column: 1 / 4;
+  grid-row: 3 / 4;
+  font-size: 20ox;
+}
+
+main h2 {
+  display: grid;
+  background-color: rgb(255, 255, 255);
+  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+  grid-column: 1 / 4;
+  grid-row: 3 / 4;
+}
+
+footer {
+  background-color: rgb(255, 255, 255);
+  color: rgb(32, 19, 19);
+  font: 10px "Helvetica Neue", Arial, Helvetica, sans-serif;
+  text-align: center;
+  grid-row: 4 / 5;
+  grid-column: 1 / 5;
 }
 
  nav {
    display: grid;
    grid-column: 1 / 4;
    grid-row:  1 / 2;
-   background-color: rgb(236, 230, 230);
+   background-color: rgb(255, 255, 255);
     width: 100%;
     justify-items: center;
     font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; 
  }
 
  ul.topnav li   {
- /* color: whitesmoke; */
- display: inline-block;
- margin: 20px;
- font-style: black 30px;
- font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; 
+  display: inline-block;
+  margin: 20px;
+  font-style: black 30px;
+  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; 
 
 }
 
 :hover nav ul li a:hover {
 
-  background: #faf5f6; /* Old browsers */
+  background: #969494; /* Old browsers */
 
   /* background: -moz-linear-gradient(top, #b0ca34 0%, #96c40d 100%); FF3.6+ 
-
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b0ca34), color-stop(100%,#96c40d)); Chrome,Safari4+
-
   background: -webkit-linear-gradient(top, #b0ca34 0%,#96c40d 100%);  Chrome10+,Safari5.1+ 
-
   background: -o-linear-gradient(top, #b0ca34 0%,#96c40d 100%); Opera 11.10+
-
   background: linear-gradient(to bottom, #faf5f6 0%,#521b26, 100%);*/
   }
-   
-main {
- background-color: rgb(236, 230, 230);
- font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; 
- width: 100%;
- /* display: grid;
- grid-row: 2 / 3;
- grid-column: 1 / 6; */
-}
 
-footer {
-  background-color: rgb(236, 230, 230);
-  color: rgb(32, 19, 19);
-  font: 10px "Helvetica Neue", Arial, Helvetica, sans-serif;
-  text-align: center;
-}
+  /* extra large screens */
+
+  @media all and (min-width: 1400px) {
+
+    #mobi {
+      display: none;
+    }
+
+    img.desktop {
+      width: 100%;
+      display: inline-block;
+     }
+    
+     img.tablet, img.phone {
+        display: none;
+    }
+      main {
+       width:65%;
+     } 
+  }
+
+  #myLinks  {
+    display: none;
+  }
 
 /* DESKTOP */
+@media all and (min-width: 921px) and (max-width: 1399px){
 
-@media all and (max-width: 2560px) {
-	
-  main {
+  /* added from Sara's code maring flot left and chamged tp .wrapper */
+  .wrapper {
    width: 95%;
-  
+   margin: auto;
+
  }
 
+/* added inline-blcok from blck */
 img.desktop {
   width: 100%;
-  display: block;
+  display: inline-block;
  }
- 
- img.tablet img.phone {
+
+ img.tablet, img.phone {
     display: none;
 }
   main {
    width:65%;
  } 
 
+.mobi {
+  display: none;
+}
+/* end tag */
 }
 
+
+
 /*TABLET*/
-@media all and (min-width:737px) and (max-width: 920px) {
- 
+@media all and (min-width:738px) and (max-width: 920px) {
+
   main {
     width: 75%;
     overflow: hidden; 
   }
 
+  #mobi {
+    display: block;
+  }
  
-  .tablet {
-          width: auto;
-          display: block;
+  #myTopnav
+  {
+    display: none;
+  }
+
+  nav {
+    display: none;
+
+  }
+  
+
+/* changed wisth from auito and block to inline  */
+  img.tablet {
+          width: 100%;
+          display: inline-block;
    }
-   
+
   img.desktop, img.phone {
         display: none;
      }  
-   
-  
+
+
    /* ul.topnav li a.selected {
        background-color: #ccc;
        color:#000;
@@ -133,19 +172,88 @@ img.desktop {
 }
 
 /* PHONE */
-@media all and (max-width: 738 px) {
-   
+@media all and (max-width: 737px) {
+
   main {
-    width: 40%;
+    width: 100%;
+    margin: 10px;
     overflow: hidden; 
   }
+  
+  .wrapper #mobi {
+    display: block;
+  }
 
+  #myTopnav
+  {
+    display: none;
+  }
+
+  nav {
+    display: none;
+  }
+
+  /* changed from block-size */
   img.phone {
-          width:100%;
-           display: block;
+          width:280px;
+          display: block;
    }
-   
-   img.tablet img.desktop {
+
+   img.tablet, img.desktop {
         display: none;
      }  
     }
+   
+    /* FORM CSS */
+    main.form  {
+      margin:1em;
+      font: 14px "Fieldwork Geo", Acute, Helvetica;
+    }
+    /* label {
+      font: 14px "Fieldwork Geo", Acute, Helvetica;
+    } */
+    /* writes to small text above reCAPTCHA upon failure */
+    
+    .dateFeedback{
+    font-style:italic;
+    font-size:70%;
+    font-weight:bold;
+    color:#f00;
+    }
+    
+    input:required {
+        border: 1px solid red;
+    }
+    
+    input:optional, textarea:optional {
+       background-color:#f1f1f1;
+       border:1px solid #ccc;
+    }
+    
+    input[type="submit"], input[type="button"] {
+    background-color: #fff;
+    border-radius: 4px;
+    border: solid 1px #ccc;
+    padding: 0.3em 0.5em;
+    }
+    
+    fieldset {
+    border: 1px solid #ccc;
+    max-width: 350px;
+    }
+    
+    legend {
+    margin-left: 0.5em;
+    padding: 0.2em 0.5em;
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    }
+    
+    /* end reCAPTCHA styles */
+    
+    
+    
+    /* end reCAPTCHA styles */
+    
+    
+    
